Configuration cleanup. Add response types and examples for all VC status list endpoints.
